# mcp-server-dynamic-env

./: .gitignore  README.md  pyproject.toml  server.py
.github/workflows/: tests.yml
src/: config.py  dynamicenv_service.py  kubernetes_client.py  utils.py
src/models/: dynamicenv.py
tests/: conftest.py  test_dynamicenv.py
