[project]
name = "mcp-server-dynamic-env"
version = "0.1.0"
description = "MCP Server for DynamicEnv Management"
authors = [{ name = "Yonathan Shtekel" }]
requires-python = "~=3.10"
dependencies = [
    "kubernetes>=28.1.0,<29",
    "pydantic~=2.0",
    "mcp[cli]>=1.6.0",
    "fastapi>=0.100.0,<0.101",
    "uvicorn>=0.23.1,<0.24",
]

[project.scripts]
mcp-server = "server:main"

[dependency-groups]
dev = [
    "pytest~=7.0",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov",
    "ruff>=0.1.0",
    "mypy",
    "bandit",
    "safety",
    "interrogate",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async/await test",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
fail-under = 95
exclude = ["tests"]
verbose = 2

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["src"]
